<resources>
    <string name="app_name" translatable="false">AppHub</string>

    <!--    Main act-->

    <string name="hello" translatable="false">Hello world!</string>
    <string name="button" translatable="false">File Act</string>
    <string name="button2" translatable="false">Sensor Act</string>
    <string name="button3" translatable="false">Frag Act</string>
    <string name="button4" translatable="false">Draw Act</string>
    <string name="button5" translatable="false">Circle Act</string>
    <string name="button6" translatable="false">Calc Act</string>
    <string name="button7" translatable="false">Recycle Act</string>
    <string name="button8" translatable="false">Db Act</string>

    <!--    Cat frag-->
    <string name="hello_cat_fragment" translatable="false">Hello cat fragment!</string>

    <!--    Blank frag-->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment!</string>


    <!--    Calc act-->

    <string name="first_num">Первое число</string>
    <string name="second_num" translatable="false">Second number</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="divide" translatable="false">/</string>
    <string name="multiply" translatable="false">*</string>

    <!-- Create notes act -->
    <string name="activity_created_notes_text_input_hint_1">Заголовок заметки</string>
    <string name="activity_created_notes_text_input_hint_2">Текст заметки</string>
    <string name="title_save">Сохранить</string>
    <string name="error_null">В поле ничего не введено.</string>
    <string name="secret_option" translatable="false">\???</string>
    <string name="dialog_positive_button_text" translatable="false">ОК</string>
    <string name="dialog_negative_button_text">Назад</string>
    <string name="secret_dialog_title">Введите пароль</string>
    <string name="secret_password">123456</string>
</resources>